# Boost.PolyCollection

./: .travis.yml  CMAKE_GUIDE.md  CMakeLists.txt  README.md
example/: CMakeLists.txt  algorithms.cpp  exceptions.cpp  insertion_emplacement.cpp  perf.cpp  rolegame.hpp  segmented_structure.cpp
include/boost/poly_collection/: algorithm.hpp  any_collection.hpp  any_collection_fwd.hpp  base_collection.hpp  base_collection_fwd.hpp  exception.hpp  function_collection.hpp  function_collection_fwd.hpp
include/boost/poly_collection/detail/: any_model.hpp  base_model.hpp  callable_wrapper.hpp  function_model.hpp  is_acceptable.hpp  is_callable.hpp  is_constructible.hpp  is_final.hpp  is_nothrow_eq_comparable.hpp  packed_segment.hpp  poly_collection.hpp  segment.hpp  segment_backend.hpp  segment_split.hpp  segment_switch.hpp  split_segment.hpp  stride_iterator.hpp  value_holder.hpp
perf/: perf.cpp
test/: CMakeLists.txt  any_types.hpp  base_types.hpp  function_types.hpp  test_algorithm_impl.hpp  test_algorithm_main.cpp  test_all_main.cpp  test_capacity.cpp  test_capacity_main.cpp  test_comparison.cpp  test_comparison_main.cpp  test_construction.cpp  test_construction_main.cpp  test_emplacement.cpp  test_emplacement_main.cpp  test_erasure.cpp  test_erasure_main.cpp  test_insertion.cpp  test_insertion_main.cpp  test_iterators.cpp  test_iterators_main.cpp  test_registration.cpp  test_registration_main.cpp  test_utilities.hpp
